Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "print()"
+   ]
   },
   {
    "cell_type": "code",
