Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,22 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Type help() for interactive help, or help(object) for help about object."
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class object in module builtins:\n",
+      "\n",
+      "class object\n",
+      " |  The most base type\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "help(object)\n"
+    "help(object)"
    ]
   },
   {
